@@ -23,11 +23,15 @@ Boston, MA 02111-1307, USA.  */
 /* Darwin 7.0 and above have C99 functions.   */
 #define TARGET_C99_FUNCTIONS 1
 
-/* Machine dependent libraries.  Include libmx when compiling on Darwin 7.0
-   and above.  Include libSystemStubs when compiling on 8.0 and above and
-   not 64-bit long double.  */
+/* APPLE LOCAL begin mainline */
+/* Machine dependent libraries.  Include libmx when compiling on
+   Darwin 7.0 and above, but before libSystem, since the functions are
+   actually in libSystem but for 7.x compatibility we want them to be
+   looked for in libmx first.  Include libSystemStubs when compiling
+   on 8.0 and above and not 64-bit long double.  */
 
 #undef	LIB_SPEC
 #define LIB_SPEC "%{!static:\
   %{!mlong-double-64:%{pg:-lSystemStubs_profile;:-lSystemStubs}} \
-  -lSystem -lmx}"
+  -lmx -lSystem}"
+/* APPLE LOCAL end mainline */
